#13 create UI skeleton (#26)
* added login and logout endpoints to api doc

* readded dep for api code

* api codegen

* security config for cookie based jwt handling

* suited UserController for new api

* fe api codegen

* added auth guard service

* configured api module to save auth cookie

* added new material elements and reactive forms to shared module

* created login standalone component an necessary models, services

* created admin module

* created admin root component

* added lazy loading on app module level

* added admin menu and components with routing

* added login form submit on pressing enter

* wrote unit tests

* removed unused imports

* added minimal width and height for login form

* removed logout endpoint

* fixed unit test for UserController
