# backend/src/main/kotlin/hu/hollo/news/api/UserApi.kt
@@ -7,14 +7,39 @@ package hu.hollo.news.api
 
 import hu.hollo.news.model.dto.UserCredentialsDto
 import org.springframework.http.HttpStatus
+import org.springframework.http.MediaType
 import org.springframework.http.ResponseEntity
-import org.springframework.validation.annotation.Validated
+
 import org.springframework.web.bind.annotation.*
+import org.springframework.validation.annotation.Validated
+import org.springframework.web.context.request.NativeWebRequest
+import org.springframework.beans.factory.annotation.Autowired
+
+import javax.validation.constraints.DecimalMax
+import javax.validation.constraints.DecimalMin
+import javax.validation.constraints.Email
+import javax.validation.constraints.Max
+import javax.validation.constraints.Min
+import javax.validation.constraints.NotNull
+import javax.validation.constraints.Pattern
+import javax.validation.constraints.Size
 import javax.validation.Valid
+
+import kotlin.collections.List
+import kotlin.collections.Map
 
 @Validated
 @RequestMapping("\${api.base-path:}")
 interface UserApi {
+
+
+    @RequestMapping(
+            method = [RequestMethod.GET],
+            value = ["/user/check-token"]
+    )
+    fun checkToken(): ResponseEntity<Unit> {
+        return ResponseEntity(HttpStatus.NOT_IMPLEMENTED)
+    }
 
 
     @RequestMapping(
@@ -23,7 +48,7 @@ interface UserApi {
             produces = ["text/plain"],
             consumes = ["application/json"]
     )
-    fun loginUser( @Valid @RequestBody userCredentialsDto: UserCredentialsDto): ResponseEntity<Unit> {
+    fun login( @Valid @RequestBody userCredentialsDto: UserCredentialsDto): ResponseEntity<Unit> {
         return ResponseEntity(HttpStatus.NOT_IMPLEMENTED)
     }
 }
